- https://github.com/eclipse-sirius/sirius-components/issues/878[#878] [graphql] The GraphQL argument `classId` which appeared on some fields has been replaced by `kind` since it was always the `kind` of an object. Technically, it is always the kind of a semantic element but that may not be the case forever
- [core] `IEditService.findClass()` has been removed
- [core] `IRepresentationDescriptionSearchService` has a new `findAll` method to return all the representation descriptions available in a given editing context.

=== Dependency update

- [core] Switch to Spring Boot 2.6.1
- [core] Switch to GraphQL Java 17.3
- [compatibility] Switch to Sirius Desktop 6.6.0
- [frontend] Switch to @xstate/react 1.6.3
- [frontend] Switch to typescript 4.5.4
- [frontend] Switch to @typescript-eslint/parser 5.7.0
- [frontend] Switch to xstate 4.26.1
- [frontend] Update various development dependencies such as Rollup, ESLint, Pretier and Jest

=== New features

- https://github.com/eclipse-sirius/sirius-components/issues/726[#726] [view] Nodes can now have a dynamically computed size (using `sizeComputationExpression`) which depends on the current state of the semantic model.
If the expression is present and produces a positive integer, it will be used as both the width and height of the node, in pixels.
Currently it is not possible to compute different values for width and height.
- https://github.com/eclipse-sirius/sirius-components/issues/133[#133] [diagram] Add a connector tool to help create edges in diagrams
- https://github.com/eclipse-sirius/sirius-components/issues/596[#596] [view] It is now possible to define border nodes in dynamic diagram definitions
- https://github.com/eclipse-sirius/sirius-components/issues/132[#132] [diagram] Add support for drag and drop from the explorer to a diagram
- https://github.com/eclipse-sirius/sirius-components/issues/924[#924] [view] Add support for all text styles on labels

=== Improvements
